messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-api-ingress
  labels:
    app: messaging-app
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, PATCH, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
    nginx.ingress.kubernetes.io/cors-max-age: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: api.messaging.local
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: messaging-app
                port:
                  number: 8000
  tls:
    - hosts:
        - api.messaging.local
      secretName: messaging-api-tls
